# story-size

./: .env.example  .gitignore  CLAUDE.md  HOURS_ESTIMATION_LOGIC.md  IMAGE_SUPPORT_INTEGRATION.md  README.md  application_context.json  debug_api.py  debug_docs.py  debug_platform_detection.py  learned_patterns.json  learning_feedback.json  main.py  pyproject.toml  requirements.txt  run-story-size-python.ps1  sample_config.yml  scoring_logic.md  test_platform_aware.py
planning/: INTELLIGENCE_ANALYSIS.md  INTELLIGENCE_ROADMAP.md  PRACTICAL_INTELLIGENCE_PLAN.md  TAIGA_GITEA_INTEGRATION.md
reports/: test-estimation.md
story_size/: cli.py  config.py
story_size/core/: ai_client.py  code_analysis.py  context_detector.py  directory_resolver.py  docs.py  docs_enhanced.py  enhanced_schema.py  hours_estimation.py  image_processing.py  impact_analyzer.py  learning_system.py  models.py  platform_ai_client.py  platform_detector.py  scoring.py
test_data/backend/: Program.cs
test_data/docs/: story-estimation_docs_20251124_125827.md  user-story.md
test_data/frontend/: App.tsx  package.json
test_data/mobile/: pubspec.yaml
