[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "story_size"
version = "0.1.0"
authors = [
  { name="Gemini", email="gemini@google.com" },
]
description = "An AI-powered story size estimator."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
story-size = "story_size.cli:main"
